# air_quality_server

./: Cargo.toml  README.md
src/: ccs811.rs  data.rs  main.rs
