[package]
name = "air_quality_server"
version = "0.1.0"
authors = ["Masayuki Sunahara <tamanishi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
ccs811 = "0.1.3"
rppal = "0.11.3"
serde = {version = "1.0.110", features = ["derive"]}
chrono = {version = "0.4.11", features = ["serde"]}
